Fixed benchmarks for min, max, sum, product